// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericPanel renders isPanelOpen: false 1`] = `
<StyledPanelBase
  className="genericPanel panel-custom-class"
  closeButtonAriaLabel="close button label"
  hasCloseButton={true}
  headerClassName="headerText"
  headerText="panel title"
  isLightDismiss={true}
  isOpen={false}
  onDismiss={[Function]}
>
  <div>
    child content
  </div>
</StyledPanelBase>
`;

exports[`GenericPanel renders isPanelOpen: true 1`] = `
<StyledPanelBase
  className="genericPanel panel-custom-class"
  closeButtonAriaLabel="close button label"
  hasCloseButton={true}
  headerClassName="headerText"
  headerText="panel title"
  isLightDismiss={true}
  isOpen={true}
  onDismiss={[Function]}
>
  <div>
    child content
  </div>
</StyledPanelBase>
`;

exports[`GenericPanel renders minimal content 1`] = `
<StyledPanelBase
  className="genericPanel"
  headerClassName="headerText"
  isLightDismiss={true}
/>
`;
